# ABN-CodeChallenge

./: .gitignore  README.md  requirements.txt
.github/workflows/: build_package.yaml
src/: functions.py  main.py  pyproject.toml  test_assignment.py
src/kommatipara/: __main__.py  utils.py
tests/: test_assignment.py
